--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,6 +25,7 @@ if (flutterVersionName == null) {
 android {
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
+    namespace 'com.android.homechatassist'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
